--- a/fingerprint-auth-demo-backend/Dockerfile
+++ b/fingerprint-auth-demo-backend/Dockerfile
@@ -4,23 +4,17 @@ FROM maven:3.9.9-eclipse-temurin-21-alpine AS builder
 # Set working directory
 WORKDIR /usr/src/app
 
-# Install certificates
-RUN apk add --no-cache ca-certificates
-
-# Copy Maven settings first
-COPY settings.xml /root/.m2/settings.xml
-
 # Copy pom.xml first for layer caching
 COPY pom.xml ./
 
 # Download dependencies
-RUN mvn dependency:go-offline -Dmaven.wagon.http.ssl.insecure=true -Dmaven.wagon.http.ssl.allowall=true --quiet
+RUN mvn dependency:go-offline --quiet
 
 # Copy the source code after caching dependencies
 COPY src ./src/
 
 # Build the application
-RUN mvn clean package -Dmaven.wagon.http.ssl.insecure=true -Dmaven.wagon.http.ssl.allowall=true -DskipTests --quiet
+RUN mvn clean package -DskipTests --quiet
 
 # Final runtime image
 FROM eclipse-temurin:21.0.5_11-jre-alpine
@@ -38,4 +32,4 @@ COPY --from=builder /usr/src/app/target/fingerprint-auth-demo-backend*.jar ./fin
 
 EXPOSE 8080
 
-CMD ["java","-jar","fingerprint-auth-demo-backend.jar"]
+CMD ["java","-jar","fingerprint-auth-demo-backend.jar"] 
