feat: centralize CORS configuration - Add WebConfig for centralized CORS management - Update application.yml with new CORS properties - Remove @CrossOrigin annotations from controllers

--- a/fingerprint-auth-demo-backend/src/main/resources/application.yml
+++ b/fingerprint-auth-demo-backend/src/main/resources/application.yml
@@ -32,6 +32,8 @@ spring:
 
 # Application specific configuration
 app:
+  cors:
+    allowed-origins: http://localhost:3000,https://your-frontend.onrender.com
   token:
     expiration: 300
     timestamp:
