feat: update Dockerfile for Render.com deployment - Add dynamic PORT and CORS configuration - Add environment variables support - Update jar file naming for simplicity

--- a/fingerprint-auth-demo-backend/docker/Dockerfile.prod
+++ b/fingerprint-auth-demo-backend/docker/Dockerfile.prod
@@ -22,14 +22,15 @@ FROM eclipse-temurin:21.0.5_11-jre-alpine
 WORKDIR /usr/src/app
 
 # Set environment variables
-ENV JAVA_TOOL_OPTIONS="\
-  -XX:+UseParallelGC \
-  -Xss512k \
-  -XX:+UseContainerSupport \
-  -XX:MaxRAMPercentage=25"
+ENV PORT=8080 \
+    JAVA_TOOL_OPTIONS="\
+    -XX:+UseParallelGC \
+    -Xss512k \
+    -XX:+UseContainerSupport \
+    -XX:MaxRAMPercentage=25"
 
 COPY --from=builder /usr/src/app/target/fingerprint-auth-demo-backend*.jar ./fingerprint-auth-demo-backend.jar
 
-EXPOSE 8080
+EXPOSE ${PORT}
 
-CMD ["java","-jar","fingerprint-auth-demo-backend.jar"] 
+CMD ["sh", "-c", "java -jar fingerprint-auth-demo-backend.jar --server.port=${PORT}"] 
