--- a/fingerprint-auth-demo-frontend/package.json
+++ b/fingerprint-auth-demo-frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fingerprint-auth-demo-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,36 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/charts": "^2.0.3",
-    "@ant-design/icons": "^5.3.0",
-    "@emotion/react": "^11.11.3",
+    "@ant-design/charts": "^2.3.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fingerprintjs/fingerprintjs": "^4.2.1",
-    "@mui/icons-material": "^5.15.11",
-    "@mui/material": "^5.15.11",
-    "@types/crypto-js": "^4.2.2",
-    "antd": "^5.14.1",
-    "axios": "^1.6.7",
+    "@fingerprintjs/fingerprintjs-pro": "^3.11.10",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
+    "@mui/x-data-grid": "^6.18.1",
+    "@mui/x-date-pickers": "^6.18.1",
+    "antd": "^5.25.3",
+    "axios": "^1.6.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
+    "@types/crypto-js": "^4.1.3",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
