--- a/fingerprint-auth-demo-backend/pom.xml
+++ b/fingerprint-auth-demo-backend/pom.xml
@@ -22,6 +22,13 @@
         <bucket4j.version>8.0.1</bucket4j.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -75,6 +82,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.fingerprintjs</groupId>
+            <artifactId>fingerprint-pro-server-api-java-sdk</artifactId>
+            <version>v7.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
         </dependency>
     </dependencies>
 
