--- a/fingerprint-auth-demo-frontend/package.json
+++ b/fingerprint-auth-demo-frontend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fingerprint-auth-demo-frontend",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:with-key": "cross-env FINGERPRINT_PRO_API_KEY=your_key_here vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
