--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
         value: release
       - key: CORS_ALLOWED_ORIGINS
         value: https://fingerprint-auth-demo.onrender.com
-      - key: FINGERPRINT_API_KEY
+      - key: FINGERPRINT_SECRET_KEY
         sync: false
       - key: FINGERPRINT_API_URL
         value: https://api.fpjs.io
@@ -34,4 +34,6 @@ services:
       - key: VITE_API_BASE_URL
         value: https://fingerprint-auth-demo-backend.onrender.com/api
       - key: VITE_FINGERPRINT_PUBLIC_API_KEY
+        sync: false
+      - key: FINGERPRINT_PUBLIC_KEY
         sync: false
